--- a/html/01_company/01_brand.html
+++ b/html/01_company/01_brand.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="../../lib/css/layout.css">
     <link rel="stylesheet" href="../../lib/css/font.css">
     <link rel="stylesheet" href="../../lib/css/slick.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../../lib/css/content.css">
     <script type="text/javascript" src="../../lib/js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="../../lib/js/slick.min.js"></script>
+    <script type="text/javascript" src="../../lib/js/aos.js"></script>
     <script type="text/javascript" src="../../lib/js/ui.js"></script>
 </head>
 <body>
@@ -40,12 +42,12 @@
                         <div class="has-bg"></div>
                         <div class="inner-wrap bg-FAF8F6">
                             <div class="desc-wrap">
-                                <h2 class="font64 ta-c">BRAND STORY</h2>
+                                <h2 class="font64">BRAND STORY</h2>
                                 <p class="font24">
-                                    쥬씨컴퍼니는 대중적인 메뉴를<br/>
+                                    쥬씨컴퍼니는 대중적인 메뉴를<br class="mo-hidden">
                                     착한 가격에 제공하는 브랜드를 만듭니다.
                                     <br/><br/>
-                                    고객이 부담없는 가격에 ‘기분 좋은 한끼’를 경험하며<br/>
+                                    고객이 부담없는 가격에 ‘기분 좋은 한끼’를 경험하며<br class="mo-hidden">
                                     ‘가치 있는 소비’를 할 수 있도록 
                                     <br/><br/>
                                     다양한 식음료 브랜드를 만들어가는
@@ -58,16 +60,16 @@
                         <div class="has-bg"></div>
                         <div class="inner-wrap bg-FAF8F6">
                             <div class="desc-wrap">
-                                <h2 class="font64 ta-c">GLOBAL NETWORK</h2>
+                                <h2 class="font64">GLOBAL NETWORK</h2>
                                 <p class="font24">
-                                    쥬씨컴퍼니는 지구촌 곳곳으로부터 과일, 식자재 등을<br/>
+                                    쥬씨컴퍼니는 지구촌 곳곳으로부터 과일, 식자재 등을<br class="mo-hidden">
                                     직접 수입, 유통하고 있습니다.
                                     <br/><br/>
-                                    때문에 타사 대비 ‘높은 매입 경쟁력’을 가지고 있으며,<br/>
-                                    2016년 중국 진출을 시작으로 일본, 호주, 미국, 말레이시아,<br/>
+                                    때문에 타사 대비 ‘높은 매입 경쟁력’을 가지고 있으며,<br class="mo-hidden">
+                                    2016년 중국 진출을 시작으로 일본, 호주, 미국, 말레이시아,<br class="mo-hidden">
                                     싱가폴, 브루나이, 캄보디아, 필리핀, 대만 등에 진출하여
                                     <br/><br/>
-                                    ‘착한과일주스’를 전파하는<br/>
+                                    ‘착한과일주스’를 전파하는<br class="mo-hidden">
                                     No.1 과일음료 브랜드로 성장하고 있습니다.
                                 </p>
                             </div>
@@ -82,29 +84,29 @@
                         <div class="perpen-area bg-FAF8F6">
                             <div class="inner">
                                 <strong class="d-block font32 mb8">고객</strong>
-                                <span class="d-block font18 mb24">Better Experience</span>
+                                <span class="d-block font18 bold mb24">Better Experience</span>
                                 <p class="font24 bold">
-                                    부담 없는 가격으로<br/>
-                                    즐길 수 있는 기분 좋은<br/>식음료 서비스를 제공합니다.
+                                    부담 없는 가격으로<br class="mo-hidden">
+                                    즐길 수 있는 기분 좋은<br class="mo-hidden"> 식음료 서비스를 제공합니다.
                                 </p>
                             </div>
                         </div>
                         <div class="horiz-area">
                             <div class="inner">
                                 <strong class="d-block font32 mb8">파트너</strong>
-                                <span class="d-block font18 mb24">Success Partner</span>
+                                <span class="d-block font18 bold mb24">Success Partner</span>
                                 <p class="font24 bold">
-                                    다년간의 브랜드 개발 능력과 운영 노하우,<br/>
-                                    매입 경쟁력 등을 기반으로 파트너와 함께<br/>
+                                    다년간의 브랜드 개발 능력과 운영 노하우,<br class="mo-hidden">
+                                    매입 경쟁력 등을 기반으로 파트너와 함께<br class="mo-hidden">
                                     동반 성장할 수 있는 시스템을 제공합니다.
                                 </p>
                             </div>
                             <div class="inner">
                                 <strong class="d-block font32 mb8">직원</strong>
-                                <span class="d-block font18 mb24">Greater People</span>
+                                <span class="d-block font18 bold mb24">Greater People</span>
                                 <p class="font24 bold">
-                                    고객에게 최상의 서비스를 제공하기 위해<br/>
-                                    직원들의 행복한 일의 가치를 중시하며,<br/>
+                                    고객에게 최상의 서비스를 제공하기 위해<br class="mo-hidden">
+                                    직원들의 행복한 일의 가치를 중시하며,<br class="mo-hidden">
                                     개인의 성장 기회를 제공합니다.
                                 </p>
                             </div>
@@ -116,54 +118,64 @@
                 <section class="section-3 pb160">
                     <div class="juicy-company default-wrap wide">
                         <h2 class="font64 ta-c mb40">JUICY COMPANY</h2>
-                        <ul class="list-wrap">
+                        <ul class="list-wrap of-hi">
                             <li>
-                                <span><img src="../../image/page/img_juciy_presso_logo.png" alt="juciy presso 로고"></span>
-                                <a href="javascript:void(0)" class="desc-wrap">
-                                    <p class="font32 color-FFFFFF">
-                                        새로운 쥬씨의 탄생<br/>
-                                        11년 노하우의 완전체 카페
-                                    </p>
-                                </a>
+                                <div class="default-wrap">
+                                    <span><img src="../../image/page/img_juciy_presso_logo.png" alt="juciy presso 로고"></span>
+                                    <div class="desc-wrap">
+                                        <p class="color-FFFFFF medium">
+                                            새로운 쥬씨의 탄생<br/>
+                                            11년 노하우의 완전체 카페
+                                        </p>
+                                    </div>
+                                </div>
                             </li>
                             <li>
-                                <span><img src="../../image/page/img_gomango_logo.png" alt="로고"></span>
-                                <a href="http://gomango.kr/" class="desc-wrap">
-                                    <p class="font32 color-FFFFFF mb16">
-                                        휴양지 부럽지 않은 압도적 망고량<br/>
-                                        해외감성 그대로 망고주스 전문점
-                                    </p>
-                                    <button><img src="../../image/common/icon_shortcuts.svg" alt="gomango 바로가기"></button>
-                                </a>
+                                <div class="default-wrap">
+                                    <span><img src="../../image/page/img_gomango_logo.png" alt="로고"></span>
+                                    <a href="http://gomango.kr/" class="desc-wrap">
+                                        <p class="color-FFFFFF medium">
+                                            휴양지 부럽지 않은 압도적 망고량<br/>
+                                            해외감성 그대로 망고주스 전문점
+                                        </p>
+                                        <button><img src="../../image/common/icon_shortcuts.svg" alt="gomango 바로가기"></button>
+                                    </a>
+                                </div>
                             </li>
                             <li>
-                                <span><img src="../../image/page/img_chayam_logo.png" alt="로고"></span>
-                                <a href="http://www.chayam.co.kr/" class="desc-wrap">
-                                    <p class="font32 color-FFFFFF mb16">
-                                        900원에 즐기는<br/>
-                                        차원이 다른 정통 밀크티
-                                    </p>
-                                    <button><img src="../../image/common/icon_shortcuts.svg" alt="chayam 바로가기"></button>
-                                </a>
+                                <div class="default-wrap">
+                                    <span><img src="../../image/page/img_chayam_logo.png" alt="로고"></span>
+                                    <a href="http://www.chayam.co.kr/" class="desc-wrap">
+                                        <p class="color-FFFFFF medium">
+                                            900원에 즐기는<br/>
+                                            차원이 다른 정통 밀크티
+                                        </p>
+                                        <button><img src="../../image/common/icon_shortcuts.svg" alt="chayam 바로가기"></button>
+                                    </a>
+                                </div>
                             </li>
                             <li>
-                                <span><img src="../../image/page/img_tigersushi_logo.png" alt="로고"></span>
-                                <a href="http://tigersushi.co.kr/" class="desc-wrap">
-                                    <p class="font32 color-FFFFFF mb16">
-                                        범상치 않은 초밥의 탄생<br/>
-                                        제대로 된 초밥의 대중화 선언
-                                    </p>
-                                    <button><img src="../../image/common/icon_shortcuts.svg" alt="호랑이초밥 바로가기"></button>
-                                </a>
+                                <div class="default-wrap">
+                                    <span><img src="../../image/page/img_tigersushi_logo.png" alt="로고"></span>
+                                    <a href="http://tigersushi.co.kr/" class="desc-wrap">
+                                        <p class="color-FFFFFF medium">
+                                            범상치 않은 초밥의 탄생<br/>
+                                            제대로 된 초밥의 대중화 선언
+                                        </p>
+                                        <button><img src="../../image/common/icon_shortcuts.svg" alt="호랑이초밥 바로가기"></button>
+                                    </a>
+                                </div>
                             </li>
                             <li>
-                                <span><img src="../../image/page/img_waffee_logo.png" alt="로고"></span>
-                                <a href="javascript:void(0)" class="desc-wrap">
-                                    <p class="font32 color-FFFFFF">
-                                        커피와 가장 잘 어울리는 와플<br/>
-                                        벨기에 와플 본연의 맛
-                                    </p>
-                                </a>
+                                <div class="default-wrap">
+                                    <span><img src="../../image/page/img_waffee_logo.png" alt="로고"></span>
+                                    <div class="desc-wrap">
+                                        <p class="color-FFFFFF medium">
+                                            커피와 가장 잘 어울리는 와플<br/>
+                                            벨기에 와플 본연의 맛
+                                        </p>
+                                    </div>
+                                </div>
                             </li>
                         </ul>
                     </div>
