--- a/html/inc/footer.html
+++ b/html/inc/footer.html
@@ -15,8 +15,8 @@
             </span>
         </address>
         <div class="btn-wrap">
-            <a href="btn red">개인정보처리방침</a>
-            <a href="btn red">쥬씨 가맹점주 커뮤니티</a>
+            <a href="javascript:void(0)" class="btn red">개인정보처리방침</a>
+            <a href="javascript:void(0)" class="btn red">쥬씨 가맹점주 커뮤니티</a>
         </div>
         <ul class="sns-wrap">
             <li><a href="https://www.facebook.com/no1.juicy/" target="_blank" title="새창이동"><img src="../../image/common/icon_facebook.png" alt="facebook icon"></a></li>
