--- a/html/inc/header.html
+++ b/html/inc/header.html
@@ -2,9 +2,7 @@
     <header id="headerWrap" class="sub">
         <!-- s:pc -->
         <div class="inner">
-            <div class="logo">
-                <h1><a href="../00_main/01_main.html"><img src="../../image/common/img_logo.svg" alt="Juicy 로고"></a></h1>
-            </div>
+            <h1 class="logo"><a href="../00_main/01_main.html"><img src="../../image/common/img_logo.svg" alt="Juicy 로고"></a></h1>
             <!-- s:nav -->
             <nav>
                 <ul class="gnb-wrap pc mo-hidden">
