--- a/html/01_company/01_brand.html
+++ b/html/01_company/01_brand.html
@@ -83,7 +83,7 @@
                             <div class="inner">
                                 <strong class="d-block font32 mb8">고객</strong>
                                 <span class="d-block font18 bold mb24">Better Experience</span>
-                                <p class="font24 bold">
+                                <p class="font18 bold">
                                     부담 없는 가격으로<br class="mo-hidden">
                                     즐길 수 있는 기분 좋은<br class="mo-hidden"> 식음료 서비스를 제공합니다.
                                 </p>
@@ -93,7 +93,7 @@
                             <div class="inner">
                                 <strong class="d-block font32 mb8">파트너</strong>
                                 <span class="d-block font18 bold mb24">Success Partner</span>
-                                <p class="font24 bold">
+                                <p class="font18 bold">
                                     다년간의 브랜드 개발 능력과 운영 노하우,<br class="mo-hidden">
                                     매입 경쟁력 등을 기반으로 파트너와 함께<br class="mo-hidden">
                                     동반 성장할 수 있는 시스템을 제공합니다.
@@ -102,7 +102,7 @@
                             <div class="inner">
                                 <strong class="d-block font32 mb8">직원</strong>
                                 <span class="d-block font18 bold mb24">Greater People</span>
-                                <p class="font24 bold">
+                                <p class="font18 bold">
                                     고객에게 최상의 서비스를 제공하기 위해<br class="mo-hidden">
                                     직원들의 행복한 일의 가치를 중시하며,<br class="mo-hidden">
                                     개인의 성장 기회를 제공합니다.
@@ -118,62 +118,77 @@
                         <h2 class="font56 ta-c mb40">JUICY COMPANY</h2>
                         <ul class="list-wrap of-hi">
                             <li>
-                                <div class="default-wrap">
-                                    <span><img src="../../image/page/img_juciy_presso_logo.png" alt="juciy presso 로고"></span>
-                                    <div class="desc-wrap">
-                                        <p class="color-FFFFFF medium">
-                                            새로운 쥬씨의 탄생<br/>
-                                            11년 노하우의 완전체 카페
-                                        </p>
-                                    </div>
-                                </div>
+                                <a href="#">
+                                    <span class="bg-wrap"></span>
+                                    <span class="desc-wrap">
+                                        <span class="brand-logo"><img src="../../image/page/img_juciy_presso_logo.png" alt="juciy presso 로고"></span>
+                                        <span class="txt-wrap">
+                                            <span class="color-FFFFFF medium">
+                                                새로운 쥬씨의 탄생<br/>
+                                                11년 노하우의 완전체 카페
+                                            </span>
+                                        </span>
+                                    </span>
+                                </a>
                             </li>
                             <li>
-                                <div class="default-wrap">
-                                    <span><img src="../../image/page/img_gomango_logo.png" alt="로고"></span>
-                                    <a href="http://gomango.kr/" class="desc-wrap">
-                                        <p class="color-FFFFFF medium">
-                                            휴양지 부럽지 않은 압도적 망고량<br/>
-                                            해외감성 그대로 망고주스 전문점
-                                        </p>
-                                        <button><img src="../../image/common/icon_shortcuts.svg" alt="gomango 바로가기"></button>
-                                    </a>
-                                </div>
+                                <a href="#">
+                                    <span class="bg-wrap"></span>
+                                    <span class="desc-wrap">
+                                        <span class="brand-logo"><img src="../../image/page/img_gomango_logo.png" alt="gomango 로고"></span>
+                                        <span class="txt-wrap">
+                                            <span class="color-FFFFFF medium">
+                                                휴양지 부럽지 않은 압도적 망고량<br/>
+                                                해외감성 그대로 망고주스 전문점
+                                            </span>
+                                            <button class="mt16"><img src="../../image/common/icon_shortcuts.svg" alt="gomango 바로가기"></button>
+                                        </span>
+                                    </span>
+                                </a>
                             </li>
                             <li>
-                                <div class="default-wrap">
-                                    <span><img src="../../image/page/img_chayam_logo.png" alt="로고"></span>
-                                    <a href="http://www.chayam.co.kr/" class="desc-wrap">
-                                        <p class="color-FFFFFF medium">
-                                            900원에 즐기는<br/>
-                                            차원이 다른 정통 밀크티
-                                        </p>
-                                        <button><img src="../../image/common/icon_shortcuts.svg" alt="chayam 바로가기"></button>
-                                    </a>
-                                </div>
+                                <a href="#">
+                                    <span class="bg-wrap"></span>
+                                    <span class="desc-wrap">
+                                        <span class="brand-logo"><img src="../../image/page/img_chayam_logo.png" alt="chayam 로고"></span>
+                                        <span class="txt-wrap">
+                                            <span class="color-FFFFFF medium">
+                                                900원에 즐기는<br/>
+                                                차원이 다른 정통 밀크티
+                                            </span>
+                                            <button class="mt16"><img src="../../image/common/icon_shortcuts.svg" alt="chayam 바로가기"></button>
+                                        </span>
+                                    </span>
+                                </a>
                             </li>
                             <li>
-                                <div class="default-wrap">
-                                    <span><img src="../../image/page/img_tigersushi_logo.png" alt="로고"></span>
-                                    <a href="http://tigersushi.co.kr/" class="desc-wrap">
-                                        <p class="color-FFFFFF medium">
-                                            범상치 않은 초밥의 탄생<br/>
-                                            제대로 된 초밥의 대중화 선언
-                                        </p>
-                                        <button><img src="../../image/common/icon_shortcuts.svg" alt="호랑이초밥 바로가기"></button>
-                                    </a>
-                                </div>
+                                <a href="http://tigersushi.co.kr/">
+                                    <span class="bg-wrap"></span>
+                                    <span class="desc-wrap">
+                                        <span class="brand-logo"><img src="../../image/page/img_tigersushi_logo.png" alt="tigersush 로고"></span>
+                                        <span class="txt-wrap">
+                                            <span class="color-FFFFFF medium">
+                                                범상치 않은 초밥의 탄생<br/>
+                                                제대로 된 초밥의 대중화 선언
+                                            </span>
+                                            <button class="mt16"><img src="../../image/common/icon_shortcuts.svg" alt="호랑이초밥 바로가기"></button>
+                                        </span>
+                                    </span>
+                                </a>
                             </li>
                             <li>
-                                <div class="default-wrap">
-                                    <span><img src="../../image/page/img_waffee_logo.png" alt="로고"></span>
-                                    <div class="desc-wrap">
-                                        <p class="color-FFFFFF medium">
-                                            커피와 가장 잘 어울리는 와플<br/>
-                                            벨기에 와플 본연의 맛
-                                        </p>
-                                    </div>
-                                </div>
+                                <a href="">
+                                    <span class="bg-wrap"></span>
+                                    <span class="desc-wrap">
+                                        <span class="brand-logo"><img src="../../image/page/img_waffee_logo.png" alt="waffee 로고"></span>
+                                        <span class="txt-wrap">
+                                            <span class="color-FFFFFF medium">
+                                                커피와 가장 잘 어울리는 와플<br/>
+                                                벨기에 와플 본연의 맛
+                                            </span>
+                                        </span>
+                                    </span>
+                                </a>
                             </li>
                         </ul>
                     </div>
