--- a/html/01_company/01_brand.html
+++ b/html/01_company/01_brand.html
@@ -40,7 +40,7 @@
                         <div class="has-bg"></div>
                         <div class="inner-wrap bg-FAF8F6">
                             <div class="desc-wrap">
-                                <h2 class="font56">BRAND STORY</h2>
+                                <h2>BRAND STORY</h2>
                                 <p class="font24">
                                     쥬씨컴퍼니는 대중적인 메뉴를<br class="mo-hidden">
                                     착한 가격에 제공하는 브랜드를 만듭니다.
@@ -58,7 +58,7 @@
                         <div class="has-bg"></div>
                         <div class="inner-wrap bg-FAF8F6">
                             <div class="desc-wrap">
-                                <h2 class="font56">GLOBAL NETWORK</h2>
+                                <h2>GLOBAL NETWORK</h2>
                                 <p class="font24">
                                     쥬씨컴퍼니는 지구촌 곳곳으로부터 과일, 식자재 등을<br class="mo-hidden">
                                     직접 수입, 유통하고 있습니다.
