--- a/html/01_company/02_history.html
+++ b/html/01_company/02_history.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../lib/css/layout.css">
     <link rel="stylesheet" href="../../lib/css/font.css">
     <link rel="stylesheet" href="../../lib/css/slick.css">
-    <link rel="stylesheet" href="../../lib/css/main.css">
+    <link rel="stylesheet" href="../../lib/css/content.css">
     <script type="text/javascript" src="../../lib/js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="../../lib/js/slick.min.js"></script>
     <script type="text/javascript" src="../../lib/js/ui.js"></script>
@@ -33,7 +33,28 @@
 
         <!-- s:contentsWrap -->
         <div id="contentsWrap">
-
+            <div id="content1-2">
+                <strong class="title">
+                    <span class="bowlbyone">Since 2010,</span><br/>
+                    쥬씨의 오늘    
+                </strong>
+                <div class="history-contents">
+                    <ul class="history-tab">
+                        <li class="active">PRESENT - 2019</li>
+                        <li>2015 - 2010 </li>
+                        <li>2018 - 2016 </li>
+                    </ul>
+                    <div class="history-inner">
+                        <div class="year-box">
+                            <strong>2021</strong>
+                        </div>
+                        <!-- 히스토리 연도별 섹션 -->
+                        <div class="history-work">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- //e:contentsWrap -->
 
