--- a/html/01_company/01_brand.html
+++ b/html/01_company/01_brand.html
@@ -41,7 +41,7 @@
                         <div class="inner-wrap bg-FAF8F6">
                             <div class="desc-wrap">
                                 <h2>BRAND STORY</h2>
-                                <p class="font24">
+                                <p class="font20">
                                     쥬씨컴퍼니는 대중적인 메뉴를<br class="mo-hidden">
                                     착한 가격에 제공하는 브랜드를 만듭니다.
                                     <br/><br/>
@@ -59,7 +59,7 @@
                         <div class="inner-wrap bg-FAF8F6">
                             <div class="desc-wrap">
                                 <h2>GLOBAL NETWORK</h2>
-                                <p class="font24">
+                                <p class="font20">
                                     쥬씨컴퍼니는 지구촌 곳곳으로부터 과일, 식자재 등을<br class="mo-hidden">
                                     직접 수입, 유통하고 있습니다.
                                     <br/><br/>
@@ -78,7 +78,7 @@
                 <!-- s:section-2 -->
                 <section class="section-2">
                     <div class="our-mission default-wrap pt160 pb160 of-hi">
-                        <h2 class="ta-c mb40 font56">Our mission</h2>
+                        <h2 class="ta-c mb32">Our mission</h2>
                         <div class="perpen-area bg-FAF8F6">
                             <div class="inner">
                                 <strong class="d-block font32 mb8">고객</strong>
@@ -115,7 +115,7 @@
                 <!-- s:section-3 -->
                 <section class="section-3 pb160">
                     <div class="juicy-company default-wrap wide">
-                        <h2 class="font56 ta-c mb40">JUICY COMPANY</h2>
+                        <h2 class="ta-c mb32">JUICY COMPANY</h2>
                         <ul class="list-wrap of-hi">
                             <li>
                                 <a href="#">
@@ -123,7 +123,7 @@
                                     <span class="desc-wrap">
                                         <span class="brand-logo"><img src="../../image/page/img_juciy_presso_logo.png" alt="juciy presso 로고"></span>
                                         <span class="txt-wrap">
-                                            <span class="color-FFFFFF medium">
+                                            <span class="color-FFFFFF medium font24">
                                                 새로운 쥬씨의 탄생<br/>
                                                 11년 노하우의 완전체 카페
                                             </span>
@@ -137,7 +137,7 @@
                                     <span class="desc-wrap">
                                         <span class="brand-logo"><img src="../../image/page/img_gomango_logo.png" alt="gomango 로고"></span>
                                         <span class="txt-wrap">
-                                            <span class="color-FFFFFF medium">
+                                            <span class="color-FFFFFF medium font24">
                                                 휴양지 부럽지 않은 압도적 망고량<br/>
                                                 해외감성 그대로 망고주스 전문점
                                             </span>
@@ -152,7 +152,7 @@
                                     <span class="desc-wrap">
                                         <span class="brand-logo"><img src="../../image/page/img_chayam_logo.png" alt="chayam 로고"></span>
                                         <span class="txt-wrap">
-                                            <span class="color-FFFFFF medium">
+                                            <span class="color-FFFFFF medium font24">
                                                 900원에 즐기는<br/>
                                                 차원이 다른 정통 밀크티
                                             </span>
@@ -167,7 +167,7 @@
                                     <span class="desc-wrap">
                                         <span class="brand-logo"><img src="../../image/page/img_tigersushi_logo.png" alt="tigersush 로고"></span>
                                         <span class="txt-wrap">
-                                            <span class="color-FFFFFF medium">
+                                            <span class="color-FFFFFF medium font24">
                                                 범상치 않은 초밥의 탄생<br/>
                                                 제대로 된 초밥의 대중화 선언
                                             </span>
@@ -182,7 +182,7 @@
                                     <span class="desc-wrap">
                                         <span class="brand-logo"><img src="../../image/page/img_waffee_logo.png" alt="waffee 로고"></span>
                                         <span class="txt-wrap">
-                                            <span class="color-FFFFFF medium">
+                                            <span class="color-FFFFFF medium font24">
                                                 커피와 가장 잘 어울리는 와플<br/>
                                                 벨기에 와플 본연의 맛
                                             </span>
