--- a/html/02_juicyPresso/01_juicyPresso.html
+++ b/html/02_juicyPresso/01_juicyPresso.html
@@ -32,49 +32,26 @@
         <div data-include-path="../inc/header.html"></div>
 
         <!-- s:contentsWrap -->
-        <div id="contentsWrap">
-            <div id="content2-1">
+        <div id="contentsWrap" class="bg-FAF8F6">
+            <div id="content2-1" class="default-wrap">
                 <div class="visual-banner">
-                    <div class="banner-item"></div>
-                    <div class="banner-item"></div>
-                    <div class="banner-item"></div>
-                    <div class="banner-item"></div>
-                    <div class="banner-item"></div>
+                    <div class="banner-item"><img src="../../image/page/bg_juicy_presso01.jpg" alt=""></div>
+                    <div class="banner-item"><img src="../../image/page/bg_juicy_presso02.png" alt=""></div>
+                    <div class="banner-item"><img src="../../image/page/bg_juicy_presso03.jpg" alt=""></div>
+                    <div class="banner-item"><img src="../../image/page/bg_juicy_presso04.jpg" alt=""></div>
+                    <div class="banner-item"><img src="../../image/page/bg_juicy_presso05.jpg" alt=""></div>
                 </div>
-                <div class="menu-wrap">
+                <div class="menu-wrap pt160">
                     <h2 class="juicy-presso-title">쥬씨프레소</h2>
-                    <ul class="menu-tab">
-                        <li>COFFEE</li>
-                        <li>JUICE</li>
-                        <li>FRUIT PACK</li>
-                        <li>DESSERT</li>
-                        <li>SEASON</li>
-                    </ul>
-                    <div class="menu-desc">
-                        <div class="menu-item">
-                            <a href="">
-                                <span class="menu-img"><img src="" alt=""></span>
-                                <span class="menu-info">1리터 아메리카노</span>
-                            </a>
-                        </div>
-                        <div class="menu-item">
-                            <a href="">
-                                <span class="menu-img"><img src="" alt=""></span>
-                                <span class="menu-info">1리터 아메리카노</span>
-                            </a>
-                        </div>
-                        <div class="menu-item">
-                            <a href="">
-                                <span class="menu-img"><img src="" alt=""></span>
-                                <span class="menu-info">1리터 아메리카노</span>
-                            </a>
-                        </div>
-                        <div class="menu-item">
-                            <a href="">
-                                <span class="menu-img"><img src="" alt=""></span>
-                                <span class="menu-info">1리터 아메리카노</span>
-                            </a>
-                        </div>
+                    <div class="menu-tab mt40">
+                        <button class="active" data-value="coffee">COFFEE</button> 
+                        <button data-value="juice">JUICE</button>
+                        <button data-value="fruitPack">FRUIT PACK</button>
+                        <button data-value="dessert">DESSERT</button>
+                        <button data-value="season">SEASON</button>
+                    </div>
+                    <div class="menu-list presso mt80">
+                        
                     </div>
                 </div>
             </div>
