--- a/html/01_company/02_history.html
+++ b/html/01_company/02_history.html
@@ -51,6 +51,7 @@
                         <!-- 히스토리 연도별 섹션 -->
                         <div class="history-work">
                             <div class="year 2021 active">
+                                <div class="year-mo">2021</div>
                                 <ul>
                                     <li class="month-wrap">
                                         <div class="month">7월</div>
@@ -91,6 +92,7 @@
                                 </ul>
                             </div>
                             <div class="year 2020">
+                                <div class="year-mo">2020</div>
                                 <ul>
                                     <li class="month-wrap">
                                         <div class="month">12월</div>
@@ -143,6 +145,7 @@
                                 </ul>
                             </div>
                             <div class="year 2019">
+                                <div class="year-mo">2019</div>
                                 <ul>
                                     <li class="month-wrap">
                                         <div class="month">8월</div>
@@ -178,6 +181,7 @@
                                 </ul>
                             </div>
                             <div class="year 2018">
+                                <div class="year-mo">2018</div>
                                 <ul>
                                     <li class="month-wrap">
                                         <div class="month">11월</div>
@@ -276,6 +280,7 @@
                                 </ul>
                             </div>
                             <div class="year 2017">
+                                <div class="year-mo">2017</div>
                                 <ul>
                                     <li class="month-wrap">
                                         <div class="month">12월</div>
@@ -327,6 +332,7 @@
                                 </ul>
                             </div>
                             <div class="year 2016">
+                                <div class="year-mo">2016</div>
                                 <ul>
                                     <li class="month-wrap">
                                         <div class="month">12월</div>
@@ -386,6 +392,7 @@
                                 </ul>
                             </div>
                             <div class="year 2015">
+                                <div class="year-mo">2015</div>
                                 <ul>
                                     <li class="month-wrap">
                                         <div class="month">12월</div>
@@ -433,6 +440,7 @@
                                 </ul>
                             </div>
                             <div class="year 2014">
+                                <div class="year-mo">2014</div>
                                 <ul>
                                     <li class="month-wrap">
                                         <div class="month">2월</div>
@@ -445,6 +453,7 @@
                                 </ul>
                             </div>
                             <div class="year 2010">
+                                <div class="year-mo">2010</div>
                                 <ul>
                                     <li class="month-wrap">
                                         <div class="month">9월</div>
